[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "peachjam"
version = "0.0.1"
description = "A Django app to manage legal documents."
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "beautifulsoup4>=4.10.0",
    "boto3>=1.21.38",
    "cobalt>=6.0.0",
    "cssutils >= 2",
    "dj-database-url>=0.5.0",
    "Django~=4.2",
    "django-advanced-password-validation>=1.1",
    "django-allauth[socialaccount]>=0.62.0",
    "django-autocomplete-light>=3.9.7",
    "django-background-tasks-updated>=1.2.8",
    "django-ckeditor>=6.4.2",
    "django-compressor>=3.1",
    "django-contrib-comments>=2.2.0",
    "django-cors-headers>=4.3.1",
    "django-countries-plus>=1.3.2",
    "django-debug-toolbar>=4.4",
    "django-elasticsearch-debug-toolbar>=3.0.2",
    "django-elasticsearch-dsl>=7.2.2,<8.0.0",
    "django-elasticsearch-dsl-drf>=0.22.4",
    "django-extensions>=3.1.5",
    "django-filter>=22.1",
    "django-htmx>=1.18.0",
    "django-guardian>=2.4.0",
    "django-import-export<4.0",
    "django-jazzmin>=2.5.0",
    "django-languages-plus>=1.1.1",
    "django-log-request-id>=2.0.0",
    "django-nonrelated-inlines>=0.2",
    "django-modeltranslation>=0.18.10",
    "django-polymorphic==3.1.0",
    "django-recaptcha>=4.0.0",
    "django-sass-processor>=1.1",
    "django-sass-processor-dart-sass>=0.1.0",
    "django-storages>=1.12.3",
    "django-treebeard>=4.5.1",
    "django-webtest>=1.9.11",
    "djangorestframework>=3.13.1",
    "drf-spectacular>=0.26.0",
    "docpipe @ git+https://github.com/laws-africa/docpipe.git@867de526a55c3ab4ef580dab9a6d91c7b85eca21",
    "elasticsearch>=7.17.1",
    "elasticsearch-dsl>=7.4.0",
    "google-api-python-client>=2.46.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.5.1",
    "igraph>=0.10.4",
    "lxml>=4.8.0",
    "martor>=1.6",
    "Pillow>=9.0.1",
    "pre-commit>=2.17.0",
    "python-magic>=0.4.25",
    "requests>=2.27.1",
    "sentry-sdk>=1.16.0",
    "whitenoise==5.3.0",
]

[tool.setuptools.data-files]
"bin" = ["bin/pdfjs-to-text"]
