[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "peachjam-pro"
version = "0.0.1"
description = "A Django app to manage legal documents."
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "peachjam @ git+https://github.com/laws-africa/peachjam.git@047eae5de4d0197aeabcf601e5a7b566943f736b",
    "peachjam-pay @ git+https://github.com/laws-africa/peachjam-pay.git@ace9eec1776415788f9e3d45ecc20cc1d008dfc2",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4",
    "django-elasticsearch-debug-toolbar @ git+https://github.com/sellercrowd/django-elasticsearch-debug-toolbar.git@master",
    "django-webtest>=1.9.11",
    "pre-commit>=2.17.0",
]
