[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "peachjam"
version = "0.0.1"
description = "A Django app to manage legal documents."
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "beautifulsoup4>=4.10.0",
    "boto3>=1.21.38",
    "cobalt>=6.0.0",
    "css_inline>=0.17.0",
    "cssutils >= 2",
    "customerio >= 2.1",
    "customerio-cdp-analytics>=0.0.2",
    "dj-database-url>=0.5.0",
    "Django~=4.2",
    "django-advanced-password-validation>=1.1",
    "django-allauth[socialaccount]>=0.62.0",
    "django-autocomplete-light>=3.9.7",
    "django-background-tasks-updated>=1.2.8",
    "django-ckeditor>=6.4.2",
    "django-compressor>=3.1",
    "django-contrib-comments>=2.2.0",
    "django-cors-headers>=4.3.1",
    "django-countries-plus>=1.3.2",
    "django-elasticsearch-dsl>=8.0.0,<9.0.0",
    "django-extensions>=3.1.5",
    "django-filter>=22.1",
    "django-fsm-2>=4.0.0",
    "django-htmx>=1.18.0",
    "django-guardian>=2.4.0",
    "django-import-export>=4.3.1,<4.3.13",
    "django-jazzmin>=2.5.0",
    "django-languages-plus>=1.1.1",
    "django-log-request-id>=2.0.0",
    "django-nonrelated-inlines>=0.2",
    "django-modeltranslation>=0.18.10",
    "django-polymorphic==3.1.0",
    "django-recaptcha>=4.0.0",
    "django-sass-processor>=1.1",
    "django-sass-processor-dart-sass>=0.1.0",
    "django-storages>=1.12.3",
    "django-templated-email>=3.0.1",
    "django-treebeard>=4.5.1",
    "djangorestframework>=3.13.1",
    "drf-spectacular>=0.26.0",
    "docpipe @ git+https://github.com/laws-africa/docpipe.git@7bf829914cb673069784b672b69bfb349c53e01e",
    "elasticsearch>=8.0.0,<9.0.0",
    "elasticsearch-dsl>=8.0.0,<9.0.0",
    "google-api-python-client>=2.46.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.5.1",
    "html2text>=2025.4.15",
    "igraph>=0.10.4",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.34",
    "langfuse>=3.8.1",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langgraph>=1.0.0",
    "llama-index-core>=0.12.19",
    "lxml>=4.8.0,<6.0.0",
    "martor<1.7",
    "mdx-truly-sane-lists>=1.3",  # to fix list handling in markdown
    "Pillow>=9.0.1",
    "pgvector>=0.4.0",
    "PyGithub>=2.6",
    "python-magic>=0.4.25",
    "requests>=2.27.1",
    "sentry-sdk>=1.16.0,<=2.22",
    "setproctitle",
    "whitenoise==5.3.0",
]

[tool.setuptools.data-files]
"bin" = [
    "bin/html-to-png",
    "bin/pdfjs-to-text",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4",
    "django-elasticsearch-debug-toolbar @ git+https://github.com/sellercrowd/django-elasticsearch-debug-toolbar.git@master",
    "django-webtest>=1.9.11",
    "pre-commit>=2.17.0",
]
